# imui

./: CMakeLists.txt
examples/: ui.py
imgui/: CMakeLists.txt
python/csrc/: CMakeLists.txt  flags.cpp  python.cpp  sdl.cpp  widgets.cpp
python/imui/: _C.pyi  __init__.py  flags.py  sdl.py
scripts/: dev.ps1
tests/: test_imui.py
